# fileproc

./: LICENSE  MANIFEST.in  NOTES.txt  README.md  README.txt  create-test-data.sh  dal.py  helpers.py  justfile  process.py  pyproject.toml  update.py
fileproc/: config.py
fileproc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
