[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fileproc"
version = "2025.0.1"
dependencies = [
  "SQLAlchemy",
  "polars"
]
requires-python = ">=3.8.5"
authors = [
  {name = "Meman987"},
  {email = "b5a42927@gmail.com"},
]
maintainers = [
  {name = "Meman987", email = "b5a42927@gmail.com"}
]
description = "Keep track of python programs processing (massive amounts of) files."
readme = "README.md"
license-files = [ "LICENSE" ]
keywords = ["file management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[project.urls]
Repository = "https://github.com/meman987/fileproc.git"
